--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <script src="http://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.5/require.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.min.js"></script>
     <script>
-      $(document).ready(function() {
+      Zepto(function($) {
 
         // Define jquery and return Zepto.
         define('jquery', function() { 
