--- a/index.html
+++ b/index.html
@@ -40,14 +40,9 @@
 
     </style>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.5/require.min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.1/jquery.js"></script>
     <script>
-      Zepto(function($) {
-
-        // Define jquery and return Zepto.
-        define('jquery', function() { 
-          return $; 
-        });
+      $(document).ready(function() {
 
         require(['keynavigator'], function($) {
           // Example #1
