document onBeforeActive and onAfterActive
Until I looked at the source I couldn't get what I wanted done accomplished.  I found these events critical to my use of the plugin.

--- a/index.html
+++ b/index.html
@@ -269,6 +269,12 @@ require(['keynavigator'], function($) {
   parent to enable key navigation.
   - default: 'click'
 
+  <strong>onBeforeActive</strong>: {object} - callback function that executes before an element has activeClass set
+  - default: $.noop
+
+  <strong>onAfterActive</strong>: {object} - callback function that executes after an element has activeClass set
+  - default: $.noop
+
 </code></pre>
 
     <hr/>
